--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">App</a></h1>
+        <h1><a href="/">TEAM-CROWD</a></h1>
       </li>
     </ul>
 
