--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,17 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Update Profile for <%= current_user.username.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+
+  <div class="field">
+  <%= f.label :first_name, "First Name" %><br/>
+  <%= f.text_field :first_name %>
+  </div>
+
+  <div>
+  <%= f.label :last_name, "Last Name" %><br/>
+  <%= f.text_field :last_name %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -12,6 +22,11 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
+  <div>
+    <%= f.label :username, "Username" %><br/>
+    <%= f.text_field :username %>
+  </div>
+  
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
