--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <%= javascript_include_tag "vendor/modernizr" %>
-
+    <%= javascript_pack_tag    'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -21,6 +21,7 @@
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
+          <li> <%= link_to current_user.username, edit_user_registration_path %> </li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
