--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,25 @@
  *= require foundation_and_overrides
 
  */
+
+ body, h1, h2, h3 {
+   font-family: 'Titillium Web', sans-serif;
+   font-family: 'Roboto Condensed', sans-serif;
+ }
+
+ .small-block-grid-2, .medium-block-grid-4 .large-block-grid-6 {
+  text-align: center;
+}
+
+.panel {
+  border-style: solid;
+  border-color: #ff8900;
+}
+
+
+.navbar-brand {
+  padding-top: 0px;
+}
+.navbar-brand img {
+  height: 50px;
+}
