--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,18 @@
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_pack_tag    'application' %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Titillium+Web" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 <body>
 
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
+        <!-- <a class="navbar-brand" href="#">
+  <img src="mylogo.png" style="display: inline-block;">
+  <span style="display: inline-block;">My Company</span>
+</a> -->
         <h1><a href="/">TEAM-CROWD</a></h1>
       </li>
     </ul>
