--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,18 @@
 .navbar-brand img {
   height: 50px;
 }
+
+.section1 {
+  background: url(https://media.wired.com/photos/5a1f21bb19878e67b94feb44/master/w_1718,c_limit/0118-WI-FFESPO-01_sq.jpg);
+  background-size: contain;
+}
+
+.scrollbutton {
+  background: #ff8900;
+  color: black;
+}
+
+.button_secondary {
+  background: #ff8900;
+  color: black;
+}
