--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
 
     <section class="top-bar-section">
       <ul class="right">
+        <button class="scrollbutton" data-scroll="#createanevent">Create an Event</button>
+
         <%- if current_user -%>
           <li> <%= link_to current_user.username, edit_user_registration_path %> </li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
